fixed project card image on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -153,7 +153,8 @@ p {
   background-color: #f0f3f7;
   &__img {
     height: 250px;
-    width: 350px;
+    width: 100%;
+    max-width: 350px;
     filter: drop-shadow(0px 0px 1px gray);
     background-position: center;
     background-size: cover;
